# ketchup-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Dockerfile  INTEGRATION_SETUP.md  MLOPS_DATA_PIPELINE_SUBMISSION.md  Makefile  README.md  __init__.py  airflow.cfg  data_pipeline.md  docker-compose.yml  dvc.yaml  gcp.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-pipeline.txt  requirements.txt
agents/: Dockerfile.txt  README.md  __init__.py  cloudbuild.yaml  planning.py
analytics/: __init__.py  bootstrap.py
api/: __init__.py  dependencies.py  main.py
config/: __init__.py  settings.py
database/: __init__.py  connection.py  firestore_client.py  migrate.py
docker/: firestore-emulator.Dockerfile
models/: __init__.py  schemas.py
pipelines/: README.md  bias_detection.py  model_bias.md  monitoring.py  preprocessing.py  validation.py
scripts/: acquire_data.py  acquire_user_feedback.py  bias_slice.py  check_model_bias_fairlearn.py  check_model_bias_slices.py  deploy_vllm_cloud_run.sh  detect_anomalies.py  detect_bias.py  evaluate_tool_calling_bfcl.py  fairlearn_bias_slicing.py  generate_statistics.py  preprocess_data.py  push_vllm_image.sh  run_model_bias_synthetic_eval.py  setup_dvc.sh  setup_grafana_monitoring.sh  synthetic_bias_slicing_eval.py  validate_data.py
services/: auth_service.py  availability_group_service.py  availability_service.py  errors.py  feedback_service.py  group_access.py  group_service.py  planner.py  plans_service.py  user_service.py
terraform/: analytics_job.tf  apis.tf  artifact_registry.tf  backend_service.tf  cloud_sql.tf  firestore.tf  main.tf  outputs.tf  secrets.tf  service_accounts.tf  storage.tf  variables.tf
tests/: conftest.py  test_pipeline_components.py
utils/: __init__.py  api_clients.py  constants.py  (+3 more)
(+47 files in other folders)
