[project]
name = "ketchup-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "anthropic==0.7.1",
    "asyncpg==0.29.0",
    "apache-airflow==2.7.2",
    "apache-airflow-providers-google==10.10.0",
    "apache-airflow-providers-http==4.7.0",
    "black==23.12.0",
    "dvc==3.45.0",
    "dvc-gs>=3.0.2",
    "fairlearn==0.10.0",
    "fastapi==0.104.1",
    "flake8==6.1.0",
    "google-api-python-client==2.107.0",
    "google-auth==2.25.2",
    "google-auth-httplib2==0.2.0",
    "google-auth-oauthlib==1.1.0",
    "google-cloud-bigquery==3.13.0",
    "google-cloud-firestore==2.14.0",
    "google-cloud-storage==2.14.0",
    "great-expectations==0.18.2",
    "isort==5.13.2",
    "langchain==0.1.7",
    "langfuse==2.1.0",
    "mypy==1.7.1",
    "numpy==1.26.2",
    "openai==1.3.9",
    "pandas==2.1.3",
    "pendulum<3.0.0",
    "pathspec<0.12.0",
    "pre-commit>=4.5.1",
    "prometheus-client==0.19.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "pylint==3.0.3",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-json-logger==2.0.7",
    "pyyaml==6.0.1",
    "redis==5.0.1",
    "requests==2.31.0",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "slack-bolt==1.18.0",
    "slack-sdk==3.26.1",
    "sqlalchemy>=1.4.54",
    "statsmodels==0.14.0",
    "uvicorn==0.24.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["pipelines", "utils", "config", "database", "services", "models", "agents", "analytics", "api"]
